<resources>
    <string name="app_name">Male Shop</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="notify_me_every_9_am_to_check_the_new_products">Notify me every 9 AM to check the new products</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="coat">Coat</string>
    <string name="shirt">Shirt</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="notif_message">Dont forget to check our new products</string>
    <string name="NewArrival">New Arrival</string>
    <string name="favorite">Successfully added to favorites</string>
    <!--    <string name="home">Home</string>-->
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="addtocart">Add to Cart?</string>
    <!--    <string name="cart">Cart</string>-->
    <!--    <string name="home">Home</string>-->
    <!--    <string name="wishlist">Wishlist</string>-->
    <string name="deleteFavorite">Delete from ffavorite</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">sub district</string>
    <!--    <string name="kecamatan">sub-district</string>-->
    <string name="kelurahan">village</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="simpan">Save</string>
    <string name="color">COLOR</string>
    <string name="size">SIZE</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="detail">DETAIL</string>
    <!--    <string name="home">Home</string>-->
    <!--    <string name="cart">Cart</string>-->
    <string name="ship_to">Ship to</string>
    <string name="address">address</string>
    <string name="process_order">Process order</string>
    <string name="search">Search for. . .</string>
    <string name="new_arrival">New Arrival</string>
    <string name="more">More</string>
    <string name="name">name</string>
    <string name="profile_details">Profile details</string>
    <string name="edit">Edit</string>
    <string name="name_profil">Name</string>
    <string name="phone_profil">Phone</string>
    <string name="address_profil">Address</string>
    <string name="logout">Logout</string>
    <string name="searchfor_search">Search for. . .</string>
    <string name="TambahAlamat">Add Address</string>
    <string name="nama_penerima">Recipient\'s name</string>
    <string name="masukkan_nama_penerima">Enter Recipient\'s Name</string>
    <string name="nomer_telepon">Phone Number</string>
    <string name="masukkan_nomer_telepon">Enter Phone Number</string>
    <!--    <string name="provinsi">" province"</string>-->
    <!--    <string name="kota">City</string>-->
    <!--    <string name="kelurahan">village</string>-->
    <!--    <string name="alamat_lengkap">Address</string>-->
    <string name="cari_melalui_maps">Search With Maps</string>
    <string name="nama_produk">Product name</string>
    <string name="login_cepat_dengan">Login With</string>
    <string name="belum_punya_akun">Don\'t Have an Account?</string>
    <string name="daftar_sekarang">Register Now</string>
    <string name="nama_lengkap">Name</string>
    <string name="saya_telah_membaca_dan_menyetujui_aturan">I have read and agree to the Rules</string>
    <string name="atau">Or</string>
    <string name="add">Add</string>
    <string name="tambah_alamat">Add Address</string>
    <string name="payment">Payment</string>
    <string name="add_location">Add Location</string>
    <string name="shipping_details">Shipping details</string>
</resources>
